fix sidebar menu on mobile

--- a/assets/sass/_base.sass
+++ b/assets/sass/_base.sass
@@ -117,8 +117,10 @@ hr
   border-radius: 0.25rem
   align-self: start
   max-height: 80vh
+  position: sticky
+  z-index: 3
+  top: 0.25rem
   @media screen and (min-width: 42rem)
-    position: sticky
     top: 2.5rem
   &_inner
     height: 0
